# derotation

./: .gitignore  .pre-commit-config.yaml  CITATION.CFF  CNAME  LICENSE  MANIFEST.in  README.md  api_index.html  contributing.html  correct_csv.py  deformation_by_line_of_a_dog.py  genindex.html  index.html  make_small_data.py  objects.inv  paper.bib  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  sg_execution_times.html  tox.ini
.github/workflows/: docs_build_and_deploy.yml  draft-pdf.yaml  test_and_deploy.yml
_downloads/4ae3428a2b92285ebf59dc0e82575dfa/: elliptical_rotations.ipynb
_downloads/4dbdfe1e8d175de6d3a48119b3b5e4de/: use_plotting_hooks.ipynb
_downloads/af63310132bca7083120836aeb76d03e/: elliptical_rotations.py
_downloads/bd1a538d0992cfd0e031154e98d73dc8/: core_function.py
_modules/: index.html
_modules/derotation/: derotate_batch.html  derotate_by_line.html  sample_data.html
_sources/: api_index.rst.txt  contributing.md.txt  index.md.txt  sg_execution_times.rst.txt
_sources/api/: derotation.analysis.bayesian_optimization.rst.txt  derotation.analysis.fit_ellipse.rst.txt  derotation.analysis.mean_images.rst.txt  derotation.analysis.metrics.rst.txt  derotation.derotate_batch.rst.txt  derotation.derotate_by_line.rst.txt  derotation.sample_data.rst.txt  derotation.simulate.synthetic_data.rst.txt
_sources/examples/: core_function.rst.txt  elliptical_rotations.rst.txt  find_center_of_rotation.rst.txt  index.rst.txt  pipeline_with_real_data.rst.txt  rotate_and_derotate_a_square.rst.txt  sg_execution_times.rst.txt  use_plotting_hooks.rst.txt
_sources/user_guide/: configuration.md.txt  index.md.txt  key_concepts.md.txt
api/: derotation.analysis.bayesian_optimization.html  derotation.analysis.blob_detection.html  derotation.analysis.fit_ellipse.html  derotation.analysis.full_derotation_pipeline.html  derotation.analysis.incremental_derotation_pipeline.html  derotation.analysis.mean_images.html  derotation.analysis.metrics.html  derotation.config.load_config.html  derotation.derotate_batch.html  derotation.derotate_by_line.html  derotation.load_data.custom_data_loaders.html  derotation.plotting_hooks.for_derotation.html  derotation.sample_data.html  derotation.simulate.line_scanning_microscope.html  derotation.simulate.synthetic_data.html
binder/: requirements.txt
derotation/: __init__.py  adjust_rotation_degrees.py  analog_preprocessing.py  config.yml  debugging_rotation.py  debugging_script.py  derotate.py  derotate_batch.py  derotate_batch.sh  derotate_by_line.py  derotate_by_line_plot.py  derotate_incremental.py  derotation_cli.py  derotation_napari.py  derotation_pipeline.py  explore_scipy_rotation_params.py  find_centroid.py  get_data.py  isolate_rotations.py  napari.yaml  optimizers.py  plotting.py  read_binary.py  rotate_images.py  run_derotation.py  sample_data.py
derotation/analysis/: adjust_rotation_degrees.py  analog_preprocessing.py  bayesian_optimization.py  blob_detection.py  derotate_incremental_rotations.py  derotation_pipeline.py  find_centroid.py  fit_ellipse.py  full_derotation_pipeline.py  full_rotation_pipeline.py  incremental_derotation_pipeline.py  incremental_rotation_pipeline.py  mean_images.py  metrics.py  opt_frame_number.py  rigid_registration.py  rotate_images.py  saving.py
derotation/config/: config_template.yml  full_rotation.yml  incremental_rotation.yml  load_config.py
derotation/load_data/: custom_data_loaders.py  get_data.py  read_binary.py
derotation/plots/: plots.py
derotation/plotting_hooks/: for_derotation.py
derotation/postprocessing/: contrast_enhancement.py  dashboard.py  load_processed_data.py  make_mean_image_every_10deg.py  neuropil_subtraction.py  registration.py
derotation/scripts/: apply_mask.py  ccw_viz_50.py  correct_actifact.py  cw_ccw_viz.py  derotation_napari.py  explore_scipy_rotation_params.py  extract_distortion_info_from_incremental_rotations.py  isolate_rotations.py  make_plots_from_full_video.py  remove_rotations.py  (+1 more)
docs/: Makefile  make.bat  make_api_index.py  requirements.txt
doctrees/: api_index.doctree  contributing.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
examples/: README.rst  core_fucntion.py  core_function.html  core_function.py  create_plots_for_sample_video.py  deformation_by_line_of_a_dog.py  derotate.py  derotate_incremental.py  derotation_slurm_job.py  derotation_with_fitted_ellipse.py  elliptical_rotations.html  elliptical_rotations.py  find_center_of_rotation.html  find_center_of_rotation.py  find_dark_angles.py  go_through_more_datasets.py  homographies.py  improve_video_using_suite2p_metrics.py  index.html  integration_with_wrong_center.py  join_incremental_and_full_video.py  pipeline_with_real_data.html  pipeline_with_real_data.py  plot_speed_profiles.py  postprocess_CE.py  read_suite2p_output.py  rotate_and_derotate_a_square.html  rotate_and_derotate_a_square.py  rotating_3D.py  sg_execution_times.html  use_plotting_hooks.html  use_plotting_hooks.py
html/: api_index.html  contributing.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
joss-paper/: make_figure_3.py  paper.bib  paper.md  supplementary.md
linkcheck/: output.json  output.txt
tests/: conftest.py  test_fit_ellipse.py
user_guide/: configuration.html  index.html  key_concepts.html
(+176 files in other folders)
