[project]
name = "derotation"
authors = [{name = "Laura Porta", email= "l.porta@ucl.ac.uk"}]
description = "Derotate 3-photon calcium imaging videos"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "numpy",
    "tiffile",
    "matplotlib",
    "scipy",
    "PyYAML",
    "fancylog",
    "matplotlib",
    "pandas",
    "tqdm",
    "scikit-learn",
    "scikit-image",
]

[project.urls]
"Homepage" = "https://github.com/neuroinformatics-unit/derotation"
"Bug Tracker" = "https://github.com/neuroinformatics-unit/derotation/issues"
"Documentation" = "https://neuroinformatics-unit.github.io/derotation"

"Source Code" = "https://github.com/neuroinformatics-unit/derotation"
"User Support" = "https://github.com/neuroinformatics-unit/derotation/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
    "numpy",
    "tiffile",
    "matplotlib",
    "scipy",
    "PyYAML",
    "scikit-image",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["derotation*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=derotation"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings (e.g. examples)

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=derotation --cov-report=xml
"""
