[project]
name = "derotation"
authors = [{name = "Laura Porta", email= "l.porta@ucl.ac.uk"}]
description = "Derotate multiphoton calcium imaging movies"
readme = "README.md"
requires-python = ">=3.10.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "numpy",
    "tifffile",
    "matplotlib",
    "scipy",
    "PyYAML",
    "fancylog",
    "matplotlib",
    "pandas",
    "tqdm",
    "scikit-learn",
    "scikit-image",
    "bayesian-optimization",
]

[project.urls]
"Homepage" = "https://github.com/neuroinformatics-unit/derotation"
"Bug Tracker" = "https://github.com/neuroinformatics-unit/derotation/issues"
"Documentation" = "https://neuroinformatics-unit.github.io/derotation"

"Source Code" = "https://github.com/neuroinformatics-unit/derotation"
"User Support" = "https://github.com/neuroinformatics-unit/derotation/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["derotation*"]
exclude = ["tests", "docs*"]

[tool.pytest.ini_options]
addopts = "--cov=derotation"
filterwarnings = [
    "error",
]

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
lint.select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  # You can see what all the rules do here: https://docs.astral.sh/ruff/rules/
  # Some additional ruff rules that might be useful (uncomment to enable)
  #"UP",  # pyupgrade
  #"B",   # flake8 bugbear
  #"SIM", # flake8 simplify
  #"C90", # McCabe complexity
]
fix = true

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings (e.g. examples)

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,311,312}
isolated_build = True

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov={{cookiecutter.module_name}} --cov-report=xml
"""

[tool.codespell]
skip = '.git'
ignore-words-list = "ptd"
check-hidden = true
